# Qt5QMLPlugin_Example

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  qml.qrc
.github/workflows/: app_build_workflow.yml
cmake/: dependencies.cmake
qml/: Circle.qml
qml/Common/: CMakeLists.txt  Colors.qml
qml/Pages/: CMakeLists.txt
qml/Pages/Menu/: MainMenuPage_Form.ui.qml
qml/Pages/Splash/: SplashPage_Form.ui.qml
qml/UILibrary/Components/: CMakeLists.txt
qml/UILibrary/Forms/: CMakeLists.txt
qml/src/: CMakeLists.txt  TestComponent.cpp  TestComponent.hpp
